@@ -13,3 +13,4 @@ mysqld_multi.server_lsb-header.patch
 mdev-8375-passwordless-root-via-socket-auth.patch
 mdev-8375-built-in-auth-socket.patch
 mdev-8375-auth-socket-test.patch
+mdev-9528-mysql_embedded.patch
